<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:padding="@dimen/_5sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#FFBF00"
        android:gravity="center">

        <ImageView
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/icon"
            android:rotation="0"
            android:background="@drawable/round_bg_dark"
            android:backgroundTint="#BF1B1B1B"
            android:scaleType="fitCenter"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton"
            android:letterSpacing="0.1"
            android:text="@string/speak_to_world"
            android:textColor="#BF1B1B1B"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal" />


    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#FFFBEE">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_120sdp"
                android:paddingTop="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/toTranslate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="@drawable/ripple_rect"
                    android:layout_marginBottom="@dimen/_15sdp"
                    >


                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:src="@drawable/home_bg_shape_light"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="3:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:alpha="0.2"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:orientation="horizontal"
                        android:padding="@dimen/_5sdp"
                        app:layout_constraintDimensionRatio="3:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/icon_translate"
                            android:scaleType="fitCenter"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="start|center_vertical"
                            android:textSize="@dimen/_12ssp"
                            android:text="@string/offline_translate"/>


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:padding="@dimen/_15sdp"
                            android:src="@drawable/icon_go"
                            android:rotation="0"
                            android:scaleType="fitCenter"

                            />

                    </LinearLayout>



                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/toImageToText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="@drawable/ripple_rect"
                    android:layout_marginBottom="@dimen/_25sdp"
                    >


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:src="@drawable/home_bg_shape_light"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="3:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:alpha="0.2"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:orientation="horizontal"
                        android:padding="@dimen/_5sdp"
                        app:layout_constraintDimensionRatio="3:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:padding="@dimen/_7sdp"
                            android:src="@drawable/icon_image_to_text"
                            android:scaleType="fitCenter"

                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="start|center_vertical"
                            android:textSize="@dimen/_12ssp"
                            android:text="@string/image_text_translate"/>


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:padding="@dimen/_15sdp"
                            android:src="@drawable/icon_go"
                            android:rotation="0"
                            android:scaleType="fitCenter"

                            />

                    </LinearLayout>



                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/my_other_apps"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:textIsSelectable="true" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textIsSelectable="true" />



            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    </LinearLayout>


</layout>